--- a/Prototype/EngiNeed/assets/css/styles.css
+++ b/Prototype/EngiNeed/assets/css/styles.css
@@ -222,7 +222,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("BG.png") no-repeat center center fixed; /* Fixed background */
+  background: url("/static/images/BG.png") no-repeat center center fixed; /* Fixed background */
   background-size: cover; /* Ensure the image covers the entire background */
   max-height: 750px;
 }
@@ -413,7 +413,7 @@
   align-items: center;
   height: 100vh;
   justify-content: center;
-  background: url('BG.png') no-repeat center center fixed; /* Fixed background */
+  background: url("/static/images/BG.png") no-repeat center center fixed; /* Fixed background */
   background-size: cover; /* Ensure the image covers the entire background */
   
 }
@@ -448,13 +448,13 @@
   background-size: cover;
   position: relative;
   color: #fff;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('mess bg.jpg');
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('/static/images/mess bg.jpg');
   transform: translateY(85px);
 }
 
 .services__card:nth-child(2)
 {
- background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('JOVEL.png');
+ background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17, 0.6) 100%), url('/static/images/JOVEL.png');
 }
 
 .services__card h2{
@@ -908,7 +908,7 @@
   justify-content: center;
   align-items: center;
   z-index: 999; /* Ensure popup is on top */
-  background: url('BG.png') no-repeat center center fixed; /* Fixed background */
+  background: url('/static/images/BG.png') no-repeat center center fixed; /* Fixed background */
   background-size: cover; /* Ensure the image covers the entire background */
 }
 
